2001-08-30  Adam Fedor  <fedor@gnu.org>

	* Tools/sfparse.m: Add code to convert files to Unicode.
	* Resources/German/Localizable.strings: Convert to Unicode.
	* Resources/French/Localizable.strings: Likewise.

Thu Aug 30 20:03:19 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/objc-load.m (objc_load_module): Reset the load callbacks
	to 0 when we abort loading the module because of an error
	(Reported by Michael Scheibler <michael.scheibler@onevision.de>).

Thu Aug 30 13:08:17 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Documentation/gsdoc/NSObject.gsdoc: Added description of the
	class; documented alloc, allocWithZone:, class, new, dealloc
	methods.

2001-08-29  Adam Fedor  <fedor@gnu.org>

	* Source/objc-gnu2next.m (next_objc_msg_send): Fix incorrect def.

Mon Aug 28 23:45:15 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSCalendarDate.m ([+dateWithString:calendarFormat:]):
	Call alloc on self, rather than on the hardcoded NSCalendarDate
	class, so it works in subclasses.
	([+dateWithString:calendarFormat:locale:]): Idem.
	([+dateWithYear:month:day:hour:minute:second:timeZone:]): Idem.
	
2001-08-28 Georg Fleischmann <georg@vhf.de>

	* base/Source/NSCalendarDate.m [NSCalendarDate
	descriptionWithCalendarFormat:locale:]: make milliseconds
	work (%F)

2001-08-28  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: More defs.
	* Source/NSObject.m (-methodSignatureForSelector:): Use sel_get_type.

	* Source/mframe.m (method_types_get_first_argument): New function.
	(method_types_get_sizeof_arguments): Likewise.
	* Source/objc-gnu2next.m (next_objc_msg_sendv): Use them.
	
2001-08-21  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/GSFFCallInvocation.m: Clearified comments
	(gs_method_for_receiver_and_selector) added 
	(GSInvocationCallback): Check if forwardInvocation: is
	implemented to avoid infinite recursion bug.

Fri Aug 24 12:34:56 2001  Nicola Pero  <nicola@brainstorm.co.uk>
